Push busybox to our internal repository to lower dockerhub pulls

--- a/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/statefulSet.yaml.j2
@@ -22,7 +22,7 @@ spec:
     spec:
       initContainers:
       - name: create-data-dir
-        image: "{{ busybox.container.image }}"
+        image: "{{ busybox.container.public_image }}"
         # Don't always pull : if the cluster goes down, pihole can't restart without registry and registry can't restart without pulling busybox
         imagePullPolicy: IfNotPresent
         command:
