--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -316,7 +316,7 @@ watchers:
     repo: kubernetes/ingress-nginx
     release: controller-0.33.0
     includes:
-      - controller-[0-9]+\.[0-9]+\.[0-9]+.*
+      - controller-v?[0-9]+\.[0-9]+\.[0-9]+.*
   # nginx-ingress-controller is deployed using manifests generated from kubernetes/ingress-nginx
   #- type: docker_registry
   #  repo: quay.io
