--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -290,7 +290,7 @@ watchers:
     image: {{ pihole.base_image.name }}
     tag: {{ pihole.base_image.tag }}
     includes:
-      - "v[0-9]+\\.[0-9]+-amd64"
+      - "v[0-9]+\\.[0-9]+-amd64-buster"
     excludes:
       - v[1-4]\..*
   - type: docker_registry
