--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -437,6 +437,7 @@ watchers:
     excludes:
       - .*debug.*
       - .*rc.*
+      - .*dev.*
       - ^0\.
       - 1\.[0-5]\..*
   - type: docker_registry
