--- a/ansible/install_applications/roles/monitoring-node-exporter.deploy/app/deploy/daemonSet.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-node-exporter.deploy/app/deploy/daemonSet.yaml.j2
@@ -82,8 +82,6 @@ spec:
         #    - /bin/sh
         #    - -c 
         #    - "test \"$(wget --server-response --spider --quiet --no-check-certificate https://$IP:9100/ 2>&1 | awk 'NR==1 {print $2}')\" == \"401\""
-        securityContext:
-          readOnlyRootFilesystem: true
         resources:
           limits:
             cpu: {{ node_exporter_rbac_proxy.container.limits_cpu }}
@@ -91,6 +89,11 @@ spec:
           requests:
             cpu: {{ node_exporter_rbac_proxy.container.requests_cpu }}
             memory: {{ node_exporter_rbac_proxy.container.requests_memory }}
+        securityContext:
+          runAsGroup: 65532
+          runAsNonRoot: true
+          runAsUser: 65532
+          readOnlyRootFilesystem: true
       hostNetwork: true
       hostPID: true
       nodeSelector:
@@ -114,3 +117,4 @@ spec:
   updateStrategy:
     rollingUpdate:
       maxUnavailable: 10%
+    type: RollingUpdate
