--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -652,7 +652,7 @@ watchers:
     image: {{ ttrss.base_image.name }}
     tag: {{ ttrss.base_image.tag }}
     includes:
-      - '[7-9]+\.[0-9]+.[0-9]+-apache-buster'
+      - '7\.[0-9]+.[0-9]+-apache-buster'
     excludes:
       - 7\.[0-3]\..*
       - 7\.4\.[0-7]-.*
