Set unifi max heap size Fixes slowdowns, high disk read/write and oom kill.

--- a/ansible/install_applications/roles/infra-unifi.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra-unifi.deploy/app/deploy/statefulSet.yaml.j2
@@ -79,6 +79,8 @@ spec:
         env:
         - name: RUNAS_UID0
           value: "false"
+        - name: JVM_MAX_HEAP_SIZE
+          value: "{{ unifi.max_java_memory }}"
         readinessProbe:
           httpGet:
             scheme: HTTPS
