Fix roomassistant not able to reset the blutooth interface

--- a/ansible/install_applications/roles/home-roomassistant.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/home-roomassistant.deploy/app/deploy/deployment.yaml.j2
@@ -32,6 +32,9 @@ spec:
           runAsNonRoot: true
           runAsUser: 1000 # node
           readOnlyRootFilesystem: true
+          capabilities:
+            add:
+            - NET_ADMIN
         resources:
           requests:
             cpu: "{{ roomassistant.container.requests_cpu }}"
