--- a/ansible/install_applications/roles/monitoring-node-exporter.deploy/app/deploy/daemonSet.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-node-exporter.deploy/app/deploy/daemonSet.yaml.j2
@@ -29,7 +29,7 @@ spec:
         name: node-exporter
         readinessProbe:
           httpGet:
-            path: /metrics
+            path: /
             host: 127.0.0.1
             port: 9100
           initialDelaySeconds: 3
