--- a/ansible/install_infra/roles/apcups-kubernetes/templates/endpoint.yaml.j2
+++ b/ansible/install_infra/roles/apcups-kubernetes/templates/endpoint.yaml.j2
@@ -10,5 +10,5 @@ subsets:
   - ip: {{ apcups_node }}
   ports:
   - name: metrics
-    port: {{ apcups.netserver.listen_port }}
+    port: {{ apcups_netserver_listen_port }}
 {% endfor %}
