--- a/ansible/install_infra/roles/apcups-kubernetes/templates/service.yaml.j2
+++ b/ansible/install_infra/roles/apcups-kubernetes/templates/service.yaml.j2
@@ -9,5 +9,5 @@ metadata:
 spec:
   ports:
   - name: metrics
-    port: {{ apcups.netserver.listen_port }}
+    port: {{ apcups_netserver_listen_port }}
     targetPort: metrics
