Expose infra-docker-registry on the internal nginx

--- a/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/networkPolicies.yaml.j2
@@ -16,7 +16,7 @@ spec:
   ingress:
     # Allow from everywhere
     - ports:
-        - port: docker-registry
+        - port: https
 
 # We need to docker pull/push from the kubernetes nodes, so we can't limit the access from docker registry
 # TODO find a way to identify Nodes ?
