--- a/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/service-debug.yaml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/service-debug.yaml.j2
@@ -11,6 +11,6 @@ spec:
   ports:
     - port: 5001
       name: debug
-      targetPort: 5001
+      targetPort: debug
   selector:
     {{ docker_registry.labels_def | to_nice_yaml() | indent(4) }}
