--- a/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/service.yaml.j2
@@ -7,11 +7,9 @@ metadata:
     {{ docker_registry.labels_def | to_nice_yaml() | indent(4) }}
     {{ docker_registry.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
-  type: NodePort
   ports:
     - port: 443
-      name: docker-registry
-      targetPort: docker-registry
-      nodePort: {{ docker_registry.port }}
+      name: https
+      targetPort: https
   selector:
     {{ docker_registry.labels_def | to_nice_yaml() | indent(4) }}
