Fix max body size for registry

--- a/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/ingress.yaml.j2
@@ -8,6 +8,7 @@ metadata:
     {{ docker_registry.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    nginx.ingress.kubernetes.io/proxy-body-size: "0"
 spec:
   tls:
     - hosts:
