--- a/ansible/install_infra/roles/wireguard/templates/client.conf.j2
+++ b/ansible/install_infra/roles/wireguard/templates/client.conf.j2
@@ -1,12 +1,12 @@
 # {{ ansible_managed }}
 
 [Interface]
-PrivateKey = {{ lookup('file', wireguard.server.clients_dir + '/' + item.key + '/private.key') }}
-Address = {{ wireguard.cidr_prefix }}.{{ item.value.ip_suffix }}/32
+PrivateKey = {{ item.private_key }}
+Address = {{ wireguard.cidr_prefix }}.{{ item.config.ip_suffix }}/32
 DNS = {{ wireguard.clients_dns | join(',') }}
 
 [Peer]
-PublicKey = {{ lookup('file', wireguard.server.keys_dir + '/public.key') }}
+PublicKey = {{ wireguard_server_public_key }}
 Endpoint = {{ wireguard.server.endpoint }}
-AllowedIPs = {{ item.value.allowed_ips }}
+AllowedIPs = {{ item.config.allowed_ips }}
 PersistentKeepalive = 21
