--- a/ansible/install_infra/roles/wireguard/templates/interface.conf.j2
+++ b/ansible/install_infra/roles/wireguard/templates/interface.conf.j2
@@ -1,17 +1,17 @@
 # {{ ansible_managed }}
 
 [Interface]
-PrivateKey = {{ lookup('file', wireguard.server.keys_dir + '/private.key') }}
+PrivateKey = {{ wireguard_server_private_key }}
 Address = {{ wireguard.cidr_prefix }}.1/24
 ListenPort = {{ wireguard.server.listen_port }}
 
 PostUp   = iptables -A FORWARD -i {{ wireguard.server.interface }} -j ACCEPT; iptables -A FORWARD -o {{ wireguard.server.interface }} -j ACCEPT; iptables -t nat -A POSTROUTING -o {{ wireguard.server.lan_interface }} -j MASQUERADE
 PostDown = iptables -D FORWARD -i {{ wireguard.server.interface }} -j ACCEPT; iptables -D FORWARD -o {{ wireguard.server.interface }} -j ACCEPT; iptables -t nat -D POSTROUTING -o {{ wireguard.server.lan_interface }} -j MASQUERADE
 
-{% for client in wireguard.clients | dict2items %}
-# Client "{{ client.key }}"
+{% for client in wireguard_generated_clients %}
+# Client "{{ client.name }}"
 [Peer]
-PublicKey = {{ lookup('file', wireguard.server.clients_dir + '/' + client.key + '/public.key') }}
-AllowedIPs = {{ wireguard.cidr_prefix }}.{{ client.value.ip_suffix }}/32
+PublicKey = {{ client.public_key }}
+AllowedIPs = {{ wireguard.cidr_prefix }}.{{ client.config.ip_suffix }}/32
 
 {% endfor %}
