Fix docker registry timeout

--- a/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/ingress.yaml.j2
@@ -9,6 +9,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
     nginx.ingress.kubernetes.io/proxy-body-size: "0"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
 spec:
   tls:
     - hosts:
