Add basic auth to private registry

--- a/ansible/install_applications/roles/auth-openldap.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/auth-openldap.deploy/app/deploy/statefulSet.yaml.j2
@@ -73,6 +73,8 @@ spec:
       - name: certs-volume
         secret:
           secretName: openldap-certs
+      imagePullSecrets:
+      - name: docker-config
       nodeSelector:
         capability/general-purpose: 'yes'
   volumeClaimTemplates:
