--- a/ansible/install_applications/roles/dev-gitlab.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/dev-gitlab.deploy/app/deploy/statefulSet.yaml.j2
@@ -87,6 +87,8 @@ spec:
       - name: cluster-ca-volume
         secret:
           secretName: cluster-ca
+      imagePullSecrets:
+      - name: docker-config
       nodeSelector:
         capability/general-purpose: 'yes'
   volumeClaimTemplates:
