--- a/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/statefulset.yaml.j2
+++ b/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/statefulset.yaml.j2
@@ -79,6 +79,8 @@ spec:
       - name: sabnzbd-download
         persistentVolumeClaim:
           claimName: nfs-download
+      imagePullSecrets:
+      - name: docker-config
       nodeSelector:
         capability/general-purpose: 'yes'
   volumeClaimTemplates:
