--- a/ansible/install_applications/roles/download-sickchill.deploy/app/deploy/statefulset.yaml.j2
+++ b/ansible/install_applications/roles/download-sickchill.deploy/app/deploy/statefulset.yaml.j2
@@ -99,6 +99,8 @@ spec:
           claimName: nfs-multimedia
       - name: tmp-volume
         emptyDir: {}
+      imagePullSecrets:
+      - name: docker-config
       nodeSelector:
         capability/general-purpose: 'yes'
   volumeClaimTemplates:
