--- a/ansible/install_applications/roles/home-openzwave.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/home-openzwave.deploy/app/deploy/statefulSet.yaml.j2
@@ -100,6 +100,8 @@ spec:
         configMap:
           name: openzwave-config
           defaultMode: 0777
+      imagePullSecrets:
+      - name: docker-config
       nodeSelector:
         capability/home: 'yes'
   volumeClaimTemplates:
