--- a/ansible/install_applications/roles/infra-docker-registry-ui.deploy/app/config/config.yml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry-ui.deploy/app/config/config.yml.j2
@@ -14,8 +14,8 @@ verify_tls: true
 # will be used to obtain access tokens.
 # When the registry_password_file entry is used, the password can be passed as a docker secret 
 # and read from file. This overides the registry_password entry.
-#registry_username: user
-#registry_password: pass
+registry_username: {{ docker_registry_ui.registry.username }}
+registry_password: {{ docker_registry_ui.registry.password }}
 # registry_password_file: /run/secrets/registry_password_file
 
 # Event listener token.
