--- a/ansible/install_applications/roles/infra-docker-registry-ui.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry-ui.deploy/app/deploy/deployment.yaml.j2
@@ -70,5 +70,7 @@ spec:
       - name: cluster-ca-volume
         secret:
           secretName: cluster-ca
+      imagePullSecrets:
+      - name: docker-config
       nodeSelector:
         capability/general-purpose: 'yes'
