--- a/ansible/install_applications/roles/infra-docker-registry.deploy/app/config/config.yml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry.deploy/app/config/config.yml.j2
@@ -9,6 +9,12 @@ storage:
     rootdirectory: /var/lib/registry
   delete:
     enabled: true
+{% if docker_registry_users %}
+auth:
+  htpasswd:
+    realm: basic-realm
+    path: /etc/docker/registry/htpasswd
+{% endif %}
 health:
   storagedriver:
     enabled: true
