--- a/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/statefulSet.yaml.j2
@@ -73,6 +73,9 @@ spec:
         - name: docker-registry-config
           mountPath: /etc/docker/registry/config.yml
           subPath: config.yml
+        - name: docker-registry-auth
+          mountPath: /etc/docker/registry/htpasswd
+          subPath: htpasswd
         - name: certs-volume
           mountPath: /certs
       volumes:
@@ -82,6 +85,9 @@ spec:
       - name: docker-registry-config
         configMap:
           name: docker-registry-config
+      - name: docker-registry-auth
+        secret:
+          secretName: docker-registry-auth
       - name: certs-volume
         secret:
           secretName: docker-registry-certs
