--- a/ansible/install_applications/roles/infra-gandi-livedns.deploy/app/deploy/cronJob.yaml.j2
+++ b/ansible/install_applications/roles/infra-gandi-livedns.deploy/app/deploy/cronJob.yaml.j2
@@ -59,6 +59,8 @@ spec:
           - name: tz-config
             hostPath:
               path: /etc/localtime
+          imagePullSecrets:
+          - name: docker-config
           nodeSelector:
             capability/general-purpose: 'yes'
     
