--- a/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/statefulSet.yaml.j2
@@ -82,6 +82,8 @@ spec:
       - name: gotify-config
         configMap:
           name: gotify-config
+      imagePullSecrets:
+      - name: docker-config
       nodeSelector:
         capability/general-purpose: 'yes'
   volumeClaimTemplates:
