--- a/ansible/install_applications/roles/infra-intel-gpu-plugin.deploy/app/deploy/daemonSet.yaml.j2
+++ b/ansible/install_applications/roles/infra-intel-gpu-plugin.deploy/app/deploy/daemonSet.yaml.j2
@@ -57,5 +57,7 @@ spec:
       - name: kubeletsockets
         hostPath:
           path: /var/lib/kubelet/device-plugins
+      imagePullSecrets:
+      - name: docker-config
       nodeSelector:
         capability/gpu: 'intel'
