--- a/ansible/install_applications/roles/infra-kubernetes-metrics-server.deploy/app/deploy/metrics-server-deployment.yaml.j2
+++ b/ansible/install_applications/roles/infra-kubernetes-metrics-server.deploy/app/deploy/metrics-server-deployment.yaml.j2
@@ -58,6 +58,8 @@ spec:
         volumeMounts:
         - name: tmp-dir
           mountPath: /tmp
+      imagePullSecrets:
+      - name: docker-config
       nodeSelector:
         beta.kubernetes.io/os: linux
         capability/general-purpose: 'yes'
