--- a/ansible/install_applications/roles/infra-mailhog.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/infra-mailhog.deploy/app/deploy/deployment.yaml.j2
@@ -66,5 +66,7 @@ spec:
       - name: mailhog-smtp
         secret:
           secretName: mailhog-smtp
+      imagePullSecrets:
+      - name: docker-config
       nodeSelector:
         capability/general-purpose: 'yes'
