--- a/ansible/install_applications/roles/infra-pihole.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra-pihole.deploy/app/deploy/statefulSet.yaml.j2
@@ -92,6 +92,8 @@ spec:
       - name: pihole-config
         configMap:
           name: pihole-config
+      imagePullSecrets:
+      - name: docker-config
       nodeSelector:
         capability/general-purpose: 'yes'
   volumeClaimTemplates:
