--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/mongdb-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/mongdb-statefulSet.yaml.j2
@@ -96,6 +96,8 @@ spec:
       - name: zonemta-mongo-init
         secret:
           secretName: zonemta-mongo-init
+      imagePullSecrets:
+      - name: docker-config
       nodeSelector:
         capability/general-purpose: 'yes'
   volumeClaimTemplates:
