--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/zonemta-deployment.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/zonemta-deployment.yaml.j2
@@ -67,5 +67,7 @@ spec:
       - name: zonemta-certificates
         secret:
           secretName: zonemta-certificates
+      imagePullSecrets:
+      - name: docker-config
       nodeSelector:
         capability/general-purpose: 'yes'
