--- a/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/daemonSet.yaml.j2
+++ b/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/daemonSet.yaml.j2
@@ -93,6 +93,8 @@ spec:
         secret:
           secretName: fluent-bit-certs
       serviceAccountName: fluent-bit
+      imagePullSecrets:
+      - name: docker-config
       tolerations:
       - key: node-role.kubernetes.io/master
         operator: Exists
