--- a/ansible/install_applications/roles/monitoring-apcups-exporter.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-apcups-exporter.deploy/app/deploy/deployment.yaml.j2
@@ -54,5 +54,7 @@ spec:
       - name: tz-config
         hostPath:
           path: /etc/localtime
+      imagePullSecrets:
+      - name: docker-config
       nodeSelector:
         capability/general-purpose: 'yes'
