--- a/ansible/install_applications/roles/monitoring-nginx-exporter.deploy/app/deploy/daemonSet.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-nginx-exporter.deploy/app/deploy/daemonSet.yaml.j2
@@ -57,6 +57,8 @@ spec:
       - name: tz-config
         hostPath:
           path: /etc/localtime
+      imagePullSecrets:
+      - name: docker-config
       nodeSelector:
         capability/loadbalancer: 'yes'
       tolerations:
