--- a/ansible/install_applications/roles/monitoring-nginx-log-exporter.deploy/app/deploy/daemonSet.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-nginx-log-exporter.deploy/app/deploy/daemonSet.yaml.j2
@@ -66,6 +66,8 @@ spec:
       - name: nginx-log-exporter-config
         configMap:
           name: nginx-log-exporter-config
+      imagePullSecrets:
+      - name: docker-config
       nodeSelector:
         capability/loadbalancer: 'yes'
       tolerations:
