--- a/ansible/install_applications/roles/monitoring-node-exporter.deploy/app/deploy/daemonSet.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-node-exporter.deploy/app/deploy/daemonSet.yaml.j2
@@ -96,6 +96,8 @@ spec:
           readOnlyRootFilesystem: true
       hostNetwork: true
       hostPID: true
+      imagePullSecrets:
+      - name: docker-config
       nodeSelector:
         kubernetes.io/os: linux
       securityContext:
