--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/alertmanager/alertmanager.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/alertmanager/alertmanager.yaml.j2
@@ -24,6 +24,8 @@ spec:
     - name: alertmanager-k8s-pv-claim
       mountPath: /data
   image: "{{ alertmanager.container.image }}"
+  imagePullSecrets:
+  - name: docker-config
   podMetadata:
     labels:
       {{ alertmanager.labels_def | to_nice_yaml() | indent(6) }}
