--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/operator/deployment.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/operator/deployment.yaml.j2
@@ -67,6 +67,8 @@ spec:
           runAsGroup: 65532
           runAsNonRoot: true
           runAsUser: 65532
+      imagePullSecrets:
+      - name: docker-config
       nodeSelector:
         beta.kubernetes.io/os: linux
         capability/general-purpose: 'yes'
