--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/prometheus/prometheus.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/prometheus/prometheus.yaml.j2
@@ -29,6 +29,8 @@ spec:
       namespace: {{ prometheus.namespace }}
       port: web
   image: "{{ prometheus.container.image }}"
+  imagePullSecrets:
+  - name: docker-config
   podMetadata:
     labels:
       {{ prometheus.labels_def | to_nice_yaml() | indent(6) }}
