--- a/ansible/install_applications/roles/web-homer.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/web-homer.deploy/app/deploy/deployment.yaml.j2
@@ -65,5 +65,7 @@ spec:
       - name: homer-config
         configMap:
           name: homer-config
+      imagePullSecrets:
+      - name: docker-config
       nodeSelector:
         capability/general-purpose: 'yes'
