--- a/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/statefulset.yaml.j2
+++ b/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/statefulset.yaml.j2
@@ -92,6 +92,8 @@ spec:
       - name: cluster-ca-volume
         secret:
           secretName: cluster-ca
+      imagePullSecrets:
+      - name: docker-config
       nodeSelector:
         capability/general-purpose: 'yes'
   volumeClaimTemplates:
