--- a/ansible/install_applications/roles/infra-kubernetes-dashboard.deploy/app/deploy/dashboard.yaml.j2
+++ b/ansible/install_applications/roles/infra-kubernetes-dashboard.deploy/app/deploy/dashboard.yaml.j2
@@ -251,6 +251,8 @@ spec:
         - name: tmp-volume
           emptyDir: {}
       serviceAccountName: kubernetes-dashboard
+      imagePullSecrets:
+      - name: docker-config
       nodeSelector:
         "kubernetes.io/os": linux
         capability/general-purpose: 'yes'
@@ -339,6 +341,8 @@ spec:
             runAsUser: 1001
             runAsGroup: 2001
       serviceAccountName: kubernetes-dashboard
+      imagePullSecrets:
+      - name: docker-config
       nodeSelector:
         "kubernetes.io/os": linux
         capability/general-purpose: 'yes'
