--- a/ansible/install_applications/roles/infra-unifi.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra-unifi.deploy/app/deploy/statefulSet.yaml.j2
@@ -120,6 +120,8 @@ spec:
         emptyDir: {}
       - name: tmp-volume
         emptyDir: {}
+      imagePullSecrets:
+      - name: docker-config
       nodeSelector:
         capability/general-purpose: 'yes'
   volumeClaimTemplates:
