--- a/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/statefulSet.yaml.j2
@@ -98,6 +98,8 @@ spec:
           secretName: cluster-ca
       - name: tmp-volume
         emptyDir: {}
+      imagePullSecrets:
+      - name: docker-config
       nodeSelector:
         capability/general-purpose: 'yes'
   volumeClaimTemplates:
