--- a/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/statefulSet.yaml.j2
@@ -113,6 +113,8 @@ spec:
       - name: cluster-ca-volume
         secret:
           secretName: cluster-ca
+      imagePullSecrets:
+      - name: docker-config
   volumeClaimTemplates:
   - metadata:
       name: grafana-pv-claim
