--- a/ansible/install_applications/roles/monitoring-pihole-exporter.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-pihole-exporter.deploy/app/deploy/deployment.yaml.j2
@@ -69,5 +69,7 @@ spec:
       - name: tz-config
         hostPath:
           path: /etc/localtime
+      imagePullSecrets:
+      - name: docker-config
       nodeSelector:
         capability/general-purpose: 'yes'
