--- a/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/pgsql-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/pgsql-statefulSet.yaml.j2
@@ -89,6 +89,8 @@ spec:
         emptyDir: {}
       - name: tmp-volume
         emptyDir: {}
+      imagePullSecrets:
+      - name: docker-config
       nodeSelector:
         capability/general-purpose: 'yes'
   volumeClaimTemplates:
