--- a/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ttrss-job-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ttrss-job-statefulSet.yaml.j2
@@ -87,5 +87,7 @@ spec:
           secretName: cluster-ca
       - name: tmp-volume
         emptyDir: {}
+      imagePullSecrets:
+      - name: docker-config
       nodeSelector:
         capability/general-purpose: 'yes'
