--- a/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ttrss-web-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ttrss-web-statefulSet.yaml.j2
@@ -94,5 +94,7 @@ spec:
           secretName: cluster-ca
       - name: tmp-volume
         emptyDir: {}
+      imagePullSecrets:
+      - name: docker-config
       nodeSelector:
         capability/general-purpose: 'yes'
