--- a/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/deployment.yaml.j2
@@ -29,6 +29,7 @@ spec:
         securityContext:
           runAsGroup: 65532
           readOnlyRootFilesystem: true
+          runAsUser: 65532
         #readinessProbe:
         # As we bind to 127.0.0.1, we can't add probes to this container
         resources:
@@ -114,4 +115,5 @@ spec:
       securityContext:
         runAsNonRoot: true
         runAsGroup: 65532
+        runAsUser: 65532
       serviceAccountName: kube-state-metrics
