--- a/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ttrss-job-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ttrss-job-statefulSet.yaml.j2
@@ -47,6 +47,38 @@ spec:
           value: {{ ttrss.context_root }}
         - name: TTRSS_RUN_ROOT_DIR
           value: /opt/ttrss-data
+        - name: TTRSS_DB_TYPE
+          value: pgsql
+        - name: TTRSS_DB_HOST
+          value: ttrss-pgsql
+        - name: TTRSS_DB_USER
+          value: "{{ ttrss_pgsql.user }}"
+        - name: TTRSS_DB_NAME
+          value: "{{ ttrss_pgsql.database }}"
+        - name: TTRSS_DB_PASS
+          value: "{{ ttrss_pgsql.password }}"
+        - name: TTRSS_DB_PORT
+          value: "5432"
+        - name: TTRSS_SELF_URL_PATH
+          value: "https://web.{{ web_base_domain }}{{ ttrss.context_root }}/"
+        - name: TTRSS_LOCK_DIRECTORY
+          value: /opt/ttrss-data/lock
+        - name: TTRSS_CACHE_DIR
+          value: /opt/ttrss-data/cache
+        - name: TTRSS_ICONS_DIR
+          value: /opt/ttrss-data/feed-icons
+        - name: TTRSS_ICONS_URL
+          value: feed-icons
+        - name: TTRSS_SMTP_FROM_NAME
+          value: "{{ ttrss.smtp.displayName }}"
+        - name: TTRSS_SMTP_FROM_ADDRESS
+          value: "{{ ttrss.smtp.from }}"
+        - name: TTRSS_SMTP_FROM_NAME
+          value: "{{ ttrss.smtp.displayName }}"
+        - name: TTRSS_SMTP_FROM_ADDRESS
+          value: "{{ ttrss.smtp.from }}"
+        - name: TTRSS_PLUGINS
+          value: "data_migration, auth_ldap, note, mailer_smtp"      
         securityContext:
           runAsNonRoot: true
           runAsUser: 33 # www-data
