--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -288,10 +288,10 @@ watchers:
     image: {{ pihole.base_image.name }}
     tag: {{ pihole.base_image.tag }}
     includes:
-      - "v[0-9]+\\.[0-9]+\\.[0-9]+-amd64-buster"
+      - "v[0-9]+\\.[0-9]+(\\.[0-9]+)?-amd64-buster"
     excludes:
       - v[1-4]\..*
-      - v5\.[0-4]\..*
+      - v5\.[0-6][.-].*
   - type: docker_registry
     repo: {{ gotify.base_image.repo | default('registry-1.docker.io') }}
     image: {{ gotify.base_image.name }}
