--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -501,8 +501,8 @@ watchers:
   #####################
   - type: github_commit
     repo: prometheus-operator/kube-prometheus
-    branch: master
-    commit: 09ca49fce0353a90b63e172ce76435d2f85eccbb
+    branch: main
+    commit: 003daae4955be351c90484831c49d2fe88760622
   - type: github_commit
     repo: gluster/gluster-mixins
     branch: master
