--- a/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/clusterRole.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/clusterRole.yaml.j2
@@ -25,16 +25,6 @@ rules:
   - list
   - watch
 - apiGroups:
-  - extensions
-  resources:
-  - daemonsets
-  - deployments
-  - replicasets
-  - ingresses
-  verbs:
-  - list
-  - watch
-- apiGroups:
   - apps
   resources:
   - statefulsets
@@ -105,6 +95,14 @@ rules:
   - networking.k8s.io
   resources:
   - networkpolicies
+  - ingresses
+  verbs:
+  - list
+  - watch
+- apiGroups:
+  - coordination.k8s.io
+  resources:
+  - leases
   verbs:
   - list
   - watch
