Fix infra-gandi-livedns not scheduled after a long downtime

--- a/ansible/install_applications/roles/infra-gandi-livedns.deploy/app/deploy/cronJob.yaml.j2
+++ b/ansible/install_applications/roles/infra-gandi-livedns.deploy/app/deploy/cronJob.yaml.j2
@@ -8,6 +8,7 @@ metadata:
     {{ gandi_livedns.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   schedule: "{{ gandi_livedns.cron }}"
+  startingDeadlineSeconds: 600
   jobTemplate:
     spec:
       template:
