--- a/ansible/install_applications/roles/infra-docker-registry-ui.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry-ui.deploy/app/deploy/networkPolicies.yaml.j2
@@ -23,3 +23,9 @@ spec:
           podSelector:
             matchLabels:
               {{ ingress_nginx.labels_def | to_nice_yaml() | indent(14) }}
+        - namespaceSelector:
+            matchLabels:
+              name: {{ docker_registry.namespace }}
+          podSelector:
+            matchLabels:
+              {{ docker_registry.labels_def | to_nice_yaml() | indent(14) }}
