--- a/ansible/install_applications/roles/infra-docker-registry.deploy/app/config/htpasswd.j2
+++ b/ansible/install_applications/roles/infra-docker-registry.deploy/app/config/htpasswd.j2
@@ -1,3 +1,3 @@
 {% for user in docker_registry.users %}
-{{ user.name }}:{{ user.password | password_hash('bcrypt') }}
+{{ user.name }}:{{ user.password | password_hash('bcrypt', '%021d.' | format(999999999999999999999 | random(seed=user.name))) }}
 {% endfor %}
