Add relabelings for node-exporter-external

--- a/ansible/install_applications/roles/monitoring-node-exporter-external.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-node-exporter-external.deploy/app/deploy/service.yaml.j2
@@ -6,6 +6,8 @@ metadata:
   namespace: {{ node_exporter_external.namespace }}
   labels:
     {{ node_exporter_external.labels_def | to_nice_yaml() | indent(4) }}
+    # this label will be used in relabelings to replace the instance
+    node-exporter-external-name: {{ node.name }}
     prometheus-target: node-exporter-external
 spec:
   ports:
