--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/node-exporter-external.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/node-exporter-external.yaml.j2
@@ -9,6 +9,15 @@ spec:
   endpoints:
   - interval: {{ (15 * service_monitors.interval_factor | float) | int }}s
     port: metrics
+    relabelings:
+    # The `instance` label is populated with the exporter endpoint, but it doesn't make sense in our case.
+    # We monitor the NGinx instance on the host that runs the exporter container, so we inject the `node_name` in the instance label
+    - action: replace
+      regex: (.*)
+      replacment: $1
+      sourceLabels:
+      - __meta_kubernetes_service_label_node_exporter_external_name
+      targetLabel: instance
   namespaceSelector:
     matchNames:
     - {{ node_exporter_external.namespace }}
