Add apt update before searching for upgrades

--- a/ansible/install_infra/roles/monitoring-textfile-collectors/templates/collectors/apt_updates.sh.j2
+++ b/ansible/install_infra/roles/monitoring-textfile-collectors/templates/collectors/apt_updates.sh.j2
@@ -7,6 +7,8 @@
 # {{ ansible_managed }}
 # Copied from https://raw.githubusercontent.com/prometheus-community/node-exporter-textfile-collector-scripts/master/apt.sh
 
+apt-get -qq update
+
 upgrades="$(/usr/bin/apt-get --just-print dist-upgrade \
   | /usr/bin/awk -F'[()]' \
       '/^Inst/ { sub("^[^ ]+ ", "", $2); gsub(" ","",$2);
